--- a/src/components/AboutUs/styles.module.scss
+++ b/src/components/AboutUs/styles.module.scss
@@ -1,7 +1,7 @@
 @import "../../app/styles/colors";
 
 .container {
-  height: 70vh;
+  height: 100vh;
   width: 100%;
   justify-content: center;
   background-color: $BackgroundBeige;
