--- a/src/components/ContactForm/styles.module.scss
+++ b/src/components/ContactForm/styles.module.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background: $BackgroundBeige;
 }
 .item {
@@ -36,7 +36,6 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  // align-items: center;
   padding: 100px 150px;
   gap: 100px;
   overflow: hidden;
@@ -90,7 +89,7 @@
   textarea {
     width: 100%;
     padding: 12px 20px;
-    max-height: 600px;
+    max-height: 550px;
     font-size: 16px;
     font-family: Inter;
     width: 100%;
